554614:TISPRDT-8311:alignment issue in PDP of Home products

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/pdp.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/pdp.css
@@ -13174,3 +13174,10 @@ div.other-sellers .add-to-wishlist-popover-table tbody tr td {
     color: #000;
     font-family: inherit;
 }
+/* start change of TISPRDT-8311 */
+.sellerMonogramming {
+	line-height: 1.5;
+    letter-spacing: .6px;
+    margin-top: 12px;
+}
+/* end change of TISPRDT-8311 */
